--- a/result.html
+++ b/result.html
@@ -41,9 +41,10 @@
 
         // 다시 시험 보기 버튼 클릭 시 index.html로 이동
         function retryExam() {
-            localStorage.removeItem("examResults"); // 이전 결과 삭제
-            window.location.href = "index.html";
-        }
+            console.log("모든 데이터 초기화");
+            
+            window.location.href ="logins.html";
+                    }
     </script>
 
 </body>
