--- a/susu/result.html
+++ b/susu/result.html
@@ -6,12 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>시험 결과</title>
     <link rel="stylesheet" href="result.css">
+    <style>
+        /* 로그인 버튼 스타일 */
+        .loginbutton {
+            font-size: 24px; /* 글자 크기 */
+            padding: 20px 40px; /* 버튼 안의 여백을 더 크게 설정 */
+            background-color: #4CAF50; /* 버튼 배경색 */
+            color: white; /* 글자 색 */
+            border: none; /* 테두리 제거 */
+            border-radius: 8px; /* 둥근 모서리 */
+            cursor: pointer; /* 마우스 커서 모양 */
+            width: 250px; /* 버튼 너비 */
+            margin-bottom: 20px; /* 버튼 아래 여백 */
+            transition: background-color 0.3s ease; /* 배경색 변화에 부드러운 효과 */
+            text-align: center; /* 텍스트 가운데 정렬 */
+        }
+
+        .loginbutton:hover {
+            background-color: #d; /* 호버 시 배경색 변화 */
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>사용자님</h1>
+        <h1 id="user사용자-name">사용자자님</h1>
         <P>각 문제를 클릭하여 풀이를 확인할 수 있습니다.</P>
-        
+
         <button class="loginbutton" onclick="login()" style="margin-bottom: 20px;">
             로그인하기
         </button>
