--- a/user/name.html
+++ b/user/name.html
@@ -86,7 +86,7 @@
         function submitName() {
             const name = document.getElementById("nameInput").value.trim();
             if (name) {
-                sessionStorage.setItem("userName", name); // 이름 저장
+                localStorage.setItem("userName", name); // 이름 저장
                 window.location.href = "subject_select.html"; // 과목 선택 페이지로 이동
             } else {
                 alert("이름을 입력해주세요!");
